# jejune

./: .gitignore  Jejune - Rusty Esoteric-Conlang Interpreter - Redux.sublime-workspace  README.md  package.json
src-brio/: Cargo.toml
src-brio/src/: lib.rs
src-brio/src/models/: mod.rs  tx_accounts_user.rs
src-brio/src/shared/data/: accounts_user_sqli.rs  accounts_user_sqlx.rs  mod.rs  trading_sys_sqli.rs
src-jejune/: Cargo.toml
src-jejune/src/: lib.rs  main.rs
src-jejune/src/ctls/: lex_morpho_ctl.rs  mod.rs
src-jejune/src/ctls/lang/: lex_morpho_ctl.rs
src-jejune/src/models/: lex_morpho_ast.rs  mod.rs
src-jejune/src/models/ecd/: buffer_layer_mgr.rs  mod.rs
src-jejune/src/models/ecm/: buffer_layer_mgr.rs
src-jejune/src/models/lang/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: 404.svelte  index.svelte
src/app/api/: SidebarFunctions.svelte  app.config.mjs
src/app/utils/: command.js  handler.js  login.js  validator.js
src/layouts/: ContentReactLayout.svelte  EditorLayout.svelte
src/layouts/dashboard/: +layout.svelte
src/layouts/editor/: +error.svelte  +layout.svelte
src/models/faas/: AnimateNiches.svelte  ApplicationModel.svelte  DashboardModel.svelte  Enumerables.svelte  ForwardList.svelte  animateNiches.js
src/routes/: +page.svelte  404.svelte  index.svelte
src/routes/api/: +server.ts  app.config.mjs  methods.json.js  permalinks.js  postings.svelte
src/routes/dashboard/: +layout.svelte  +layout.ts  +page.server.svelte  +page.svelte  +page.ts
src/routes/editor/: +layout.svelte
tests/: index.spec.ts
(+35 files in other folders)
