[package]
name = "src-brio"
version = "0.1.0"
edition = "2021"
authors = ["boybulbousbemperor", "leinadalrus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.0"
regex = "1.7.0"
chrono = "0.4.23"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"