[package]
name = "src-jejune"
version = "0.1.0"
edition = "2021"
authors = ["BoyBulbousBemperor", "leinadalrus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.0"
regex = "1.7.0"
chrono = "0.4.23"
lindera = "0.18.0"
lindera-core = "0.18.0"
umya-spreadsheet = "0.8"